--- a/src/App.css
+++ b/src/App.css
@@ -70,4 +70,31 @@ main {
   display: flex;
   justify-content: center;
   margin: 0%;
+  background-color: #39393a;
+  color: white;
+}
+
+#projectCard {
+  margin: 20px;
+  background-color: #1e1e1e;
+  color: #9e9e9e;
+  }
+
+  #description {
+    color: #9e9e9e;  }
+
+    #home {
+      display: flex;
+      justify-content: start;
+      align-items: start;
+    }
+
+    .intro-name {
+      display: flex;
+    }
+          
+    
+#my-name {
+  margin-left: 30px;
+  color: red;
 }
